# pr-review-core

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json  test_parse_diff.py  test_read_diff.py  test_sanity.py
.github/workflows/: ai-review.yml  package-smoke.yml  release-assets.yml  release-consistency.yml  release-please.yml  release-policy.yml
adapters/github/: README.md
adapters/github-app/: README.md
core/: README.md  __init__.py
core/diff/: README.md  cli.py  filters.py  parse_diff.py  read_diff.py
core/review/: README.md  chunking.py  cli.py  model_adapter.py  noise_filter.py  output_normalizer.py  pipeline.py  prompt_builder.py  types.py
examples/: review-bitbucket-pr.sh
ops/: IMPLEMENTATION-GUARDRAILS.md  README.md  ROADMAP.md  compatibility-policy.md  consumer-integration.md  dummy-pr-test.txt  next-thin-slices.md  package-testing.md  phase-2-thin-slices.md  phase-3-thin-slices.md  phase-3-validation-checklist.md  phase-4-1-thin-slices.md  phase-4-2-thin-slices.md  phase-4-thin-slices.md  phase-5-thin-slices.md  release-checklist.md  roadmap-en.txt  roadmap-hr.txt  versioning-automation-thin-slices.md  versioning-automation.md  versioning-policy.md
ops/done/: phase-3-thin-slices.md  phase-3-validation-checklist.md  phase-4-1-exit-validation.md  phase-4-1-thin-slices.md  phase-4-2-exit-validation.md  phase-4-2-thin-slices.md  phase-4-exit-validation.md  phase-4-thin-slices.md  versioning-automation-exit-validation.md
tests/legacy/: test_parse_diff.py  test_read_diff.py  test_sanity.py
(+35 files in other folders)
